--- a/src/stv-select.html
+++ b/src/stv-select.html
@@ -27,6 +27,7 @@
             color: inherit;
             overflow: hidden;
             text-overflow: clip;
+            white-space: nowrap;
         }
 
         #arrow {
