--- a/src/stv-remember.html
+++ b/src/stv-remember.html
@@ -47,7 +47,7 @@
             <br>
             <br>
 
-            <div class="stv-btn stv-btn-shdw" on-click="handleForm">Send email with new password</div>
+            <div class="stv-btn stv-btn-shdw" on-click="handleForm">Send an email</div>
         </form>
 
         <div class="horizontal layout center message">
@@ -97,7 +97,7 @@
                 this.message = 'Processing request...';
                 this.loading = true;
                 SteviaManager.users.resetPassword({
-                    id: this.user,
+                    // id: this.user,
                     query: {
                         email: this.email
                     },
@@ -105,7 +105,7 @@
                         success: function(response) {
                             if (response.response[0].error == null) {
                                 var userId = response.response[0].results[0].id;
-                                me.message = 'An email was sent with a new password';
+                                me.message = 'An email was sent with reset password instructions';
                             } else {
                                 me.message = response.response[0].error;
                             }
