Anonymous login and css fixes

--- a/src/file/stv-file-browser.html
+++ b/src/file/stv-file-browser.html
@@ -16,7 +16,7 @@
             height: 100%;
             transition: all 0.2s;
             background-color: inherit;
-            width: 600px;
+            width: 650px;
             height: 400px;
         }
 
@@ -45,7 +45,7 @@
         #mainmenu {
             position: absolute;
             box-sizing: border-box;
-            width: 175px;
+            width: 200px;
             height: 100%;
             border-right: 1px solid rgba(130, 130, 130, 0.4);
         }
@@ -62,13 +62,14 @@
             position: relative;
             height: calc(100% - 30px);
             overflow-y: auto;
+            width:100%;
         }
 
         #maincontent {
             position: absolute;
-            left: 175px;
+            left: 200px;
             top: 0;
-            width: calc(100% - 175px);
+            width: calc(100% - 200px);
             height: 100%;
             white-space: nowrap;
         }
@@ -78,7 +79,6 @@
             width: 150px;
             height: 100%;
             border-left: 1px solid rgba(130, 130, 130, 0.4);
-            ;
             word-wrap: break-word;
         }
 
