--- a/src/file/stv-folder-tree.html
+++ b/src/file/stv-folder-tree.html
@@ -6,8 +6,6 @@
             display: block;
             position: relative;
             box-sizing: border-box;
-            height: 100%;
-            width: 100%;
             background-color: inherit;
         }
     </style>
@@ -69,14 +67,20 @@
             position: relative;
             display: block;
             box-sizing: border-box;
+            /*width:100%;*/
+            /*overflow: hidden;
+            text-overflow: clip;*/
         }
 
         .main {
             cursor: pointer;
             border: 1px solid transparent;
+            white-space: nowrap;
+            /*overflow: hidden;
+            text-overflow: clip;*/
         }
 
-        .main:hover {
+        .main:hover > * {
             background-color: var(--hover-color)
         }
 
@@ -115,7 +119,7 @@
     <template>
         <div class="main horizontal layout stv-nosel">
             <div class="arrow" empty$="{{isEmpty(file.f)}}" open$="{{file.open}}" on-click="handleArrowClick"></div>
-            <div class="name flex" on-click="handleClick" on-dblclick="handleDblclick">{{file.n}}</div>
+            <div class="name flex" on-click="handleClick" on-dblclick="handleDblclick">{{computeName(file.n)}}</div>
         </div>
         <div style="margin-left:7px;" hidden$="{{!file.open}}">
             <template is="dom-repeat" items="{{file.f}}" as="f">
@@ -135,6 +139,12 @@
         },
         isEmpty: function(f) {
             return f.length == 0;
+        },
+        computeName:function(name){
+            if (name.indexOf('anonymous___') != -1) {
+                name = 'anonymous';
+            }
+            return name;
         },
         handleArrowClick: function(e) {
             this.toggleOpen();
