Refresh info when folder changed

--- a/src/file/stv-file-browser.html
+++ b/src/file/stv-file-browser.html
@@ -344,6 +344,7 @@
                 me.set('folder', file);
                 me.set('files', file.files);
                 me.set('loading', false);
+                me.$.folderList.set('selected', null);
                 me.refresFoldersPath();
             });
         },
