--- a/src/job/stv-job-item.html
+++ b/src/job/stv-job-item.html
@@ -227,7 +227,8 @@
                 var query = {
                     sid: Cookies("bioinfo_sid"),
                     name: this.job.name,
-                    description: this.job.description
+                    description: this.job.description,
+                    outdirId:this.job.folder.parent
                 };
                 var jobConfig = {};
                 jobConfig.options = this.job.options;
