--- a/src/job/stv-job-browser.html
+++ b/src/job/stv-job-browser.html
@@ -7,8 +7,10 @@
             box-sizing: border-box;
             transition: all 0.2s;
             background-color: inherit;
-            width: 600px;
-            height: 400px;
+            width: 100%;
+            height: 100%;
+            /*width: 600px;*/
+            /*height: 400px;*/
         }
 
         #header,
