--- a/src/file/stv-file-preview.html
+++ b/src/file/stv-file-preview.html
@@ -72,8 +72,7 @@
                 request: {
                     async: false,
                     success: function(response) {
-                        // console.log(response.response[0].results[0]);
-                        data = response.response[0].results[0];
+                        data = response;
                     },
                     error: function() {
 
