--- a/src/file/stv-file-preview.html
+++ b/src/file/stv-file-preview.html
@@ -97,7 +97,6 @@
             }
         },
         fileIdChanged: function(neo, old) {
-            this._clear();
             if (neo != null) {
                 this.loadPage();
             }
@@ -108,6 +107,7 @@
             this._limit = 100;
             this._end = false;
             this.scrollTop = 0;
+            this.fileId = null;
         }
     });
 </script>
