--- a/src/file/stv-folder-list-item.html
+++ b/src/file/stv-folder-list-item.html
@@ -76,7 +76,7 @@
         <template is="dom-if" if="{{computeViewMode(viewMode, 'icon')}}">
             <div class="vertical layout flex icon-mode-elem" title$="{{file.name}}">
                 <div class="icon huge-icon"><i class$="{{computeIcon(file)}}"></i></div>
-                <div class="name flex">{{file.name}}</div>
+                <div class="filename">{{file.name}}</div>
             </div>
         </template>
     </template>
