--- a/src/file/stv-file-browser.html
+++ b/src/file/stv-file-browser.html
@@ -49,7 +49,7 @@
             box-sizing: border-box;
             width: 30%;
             /*width: 200px;*/
-            min-width: 10px;
+            min-width: 100px;
             height: 100%;
             border-right: 1px solid rgba(130, 130, 130, 0.4);
         }
@@ -92,7 +92,7 @@
             top: 0;*/
             width: 70%;
             /*width: calc(100% - 200px);*/
-            min-width: 180px;
+            min-width: 280px;
             height: 100%;
             white-space: nowrap;
         }
@@ -357,9 +357,7 @@
                         contentWidth = contentWidth + Math.floor(maindif / 2);
                     }
                     mainmenu.style.width = menuWidth + 'px';
-                    // me.$.maincontent.style.width = "Calc(100%-" + menuWidth + ")";
-                    me.$.maincontent.style.width = contentWidth + 'px';
-                    // me.$.maincontent.style.left = mainmenu.style.width;
+                    me.$.maincontent.style.width = "calc(100% - " + menuWidth + "px)";
                 }
 
             }
